[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "anna-archive-downloader"
version = "0.1.0"
description = "Automated book downloader for Anna's Archive via slow channel"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "playwright>=1.40.0",
    "requests>=2.28.0",
]

[project.scripts]
anna-download = "anna_downloader.cli:main"

[tool.setuptools.packages.find]
include = ["anna_downloader*"]

[tool.setuptools.package-data]
anna_downloader = ["inspect.js"]
